test/fail_compilation/fail226.d
struct Struct { 
        char* chptr; 
}

void main()
{
        invariant Struct iStruct;
        Struct y = iStruct;
}

